# cf0

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  .vercelignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  cookies.txt  docker-compose.yml  enable_debug_logging.sh  nx.json  package-lock.json  package.json  stream_test.py  structure.md  tsconfig.base.json  vercel-project.json  vercel.json
apps/: implementations.md  (+1 more)
apps/api-gateway/: Dockerfile  README.md  main.py  project.json  pyproject.toml  requirements.txt  run.py  supabase_store.py  workbook_store.py
apps/api-gateway/agents/: __init__.py  analyst_agent.py  ask_agent.py  base_agent.py  evaluator_agent.py  json_utils.py  openai_client.py  orchestrator.py  tools.py
apps/api-gateway/api/: README.md  admin_prompts.py  router.py  schemas.py  streaming_debug.py  token_utils.py  validators.py
apps/api-gateway/chat/: README.md  __init__.py  admin_prompts.py  memory.py  router.py  token_utils.py
apps/api-gateway/core/: README.md  __init__.py
apps/api-gateway/db/: prompts.py  supa.py
apps/api-gateway/infrastructure/: README.md  __init__.py  prompts.py  prompts_v2.py  supa.py
apps/api-gateway/llm/: __init__.py  base.py  catalog.py  chat_types.py  factory.py  streaming_utils.py
apps/api-gateway/prompts/: analyst_v2.0.json  ask_v2.0.json
apps/api-gateway/scripts/: create_supabase_tables.sql  migrate_inmem_to_supabase.py  update_imports.py
apps/api-gateway/spreadsheet_engine/: __init__.py  adapter.py  dag_recalc.py  dataframe_model.py  formula_engine.py  model.py  operations.py  summary.py  utils.py
apps/api-gateway/tests/: test_formulas.py  test_summary.py
apps/workers/: Dockerfile  README.md  project.json  pyproject.toml  requirements.txt  worker.py
(+215 files in other folders)
