[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for AI Spreadsheet Assistant"
authors = ["Development Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.11.3"
jinja2 = "^3.1.6"
openai = "^1.76.0"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
openpyxl = "^3.1.5"
typer = "^0.15.2"
tiktoken = "^0.9.0"
tqdm = "^4.67.1"
email_validator = "^2.2.0"
python-multipart = "^0.0.20"
pydantic-core = "^2.33.1"
orjson = "^3.10.16"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
markdown-it-py = "^3.0.0"
regex = "^2024.11.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true 